--- a/appspec.yml
+++ b/appspec.yml
@@ -3,3 +3,24 @@ os: linux
 files:
   - source: /
     destination: /home/rails/graphickers-hub
+permissions:
+  - object: /home/rails/graphickers-hub
+    pattern: "**"
+    owner: rails
+    group: rails
+    mode: 755
+    type:
+      - file
+hooks:
+  ApplicationStop:
+    - location: scripts/stop_server.sh
+      runas: rails
+  BeforeInstall:
+    - location: scripts/clean.sh
+      runas: rails
+  AfterInstall:
+    - location: scripts/prepare.sh
+      runas: rails
+  ApplicationStart:
+    - location: scripts/start_server.sh
+      runas: rails
