--- a/appspec.yml
+++ b/appspec.yml
@@ -1,22 +1,23 @@
 version: 0.0
 os: linux
 files:
-  - source: /
+  – source: /
     destination: /var/rails
 permissions:
-  - object: /var/
+  – object: /var/
     pattern: "**"
     mode: 775
 hooks:
   ApplicationStop:
-    - location: scripts/stop_server.sh
+    – location: scripts/stop_server.sh
       runas: root
   BeforeInstall:
-    - location: scripts/clean.sh
+    – location: scripts/clean.sh
       runas: root
   AfterInstall:
-    - location: scripts/prepare.sh
+    – location: scripts/prepare.sh
       runas: root
   ApplicationStart:
-    - location: scripts/start_server.sh
+    – location: scripts/start_server.sh
       runas: root
+
